# interactive-robot-eval-wrapper

./: LICENSE  README.md  pyproject.toml
evaluation_wrapper/: __init__.py  adapters.py  compute_metrics.py  metrics.py
examples/: README.md  closed_loop_normalized.jsonl  closed_loop_report.json  scaffold_normalized_from_release.jsonl  scaffold_report.json  scaffold_scenarios.json  scaffold_seed_results.jsonl
