[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "interactive-robot-eval-wrapper"
version = "0.1.0"
description = "Lightweight evaluation wrapper for recovery, clarification, horizon, and safe-abort metrics in interactive robot learning."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "Cheng Yin"}
]

[tool.setuptools.packages.find]
include = ["evaluation_wrapper*"]
